@@ -1,17 +1,21 @@
 package edu.mills.cs180a.wordui.model;
 
 import static edu.mills.cs180a.wordui.model.SampleData.FREQ_COUNT_KEY;
+import static edu.mills.cs180a.wordui.model.SampleData.FREQ_YEAR;
 import static edu.mills.cs180a.wordui.model.SampleData.FREQ_YEAR_KEY;
 import static edu.mills.cs180a.wordui.model.SampleData.getFrequencyByYear;
 import static edu.mills.cs180a.wordui.model.SampleData.getWordOfTheDay;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import org.junit.Before;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -29,28 +33,25 @@ class SampleDataTest {
             makeFrequencySummary(List.of(makeMap(2000, 339), makeMap(2001, 464))), "orange",
             makeFrequencySummary(List.of(makeMap(2000, 774), makeMap(2001, 941))), "blueberry",
             makeFrequencySummary(List.of(makeMap(2000, 10), makeMap(2001, 58))), "airplane",
-            makeFrequencySummary(List.of(makeMap(2000, 791), makeMap(2001, 1300))));
-
-    // 結局 makeFrequencySummaryをやると
-    // Map.of("apple",FrequencySummary）の形になる
+            makeFrequencySummary(List.of(makeMap(2012, 353))));
 
     private static final WordOfTheDay MOCK_WORD = makeWordOfTheDay("airplane",
             List.of("Any of various winged vehicles capable of flight, "
                     + "generally heavier than air and driven by jet engines or propellers."));
 
-    // private static final List<Object> MOCK_DIFINITION =
-    // List.of("Any of various plants of the genus");
+    private static final List<Object> DIFINITION_MAP = new ArrayList<Object>(
+            Arrays.asList(makeMapDefin("Any of various winged vehicles capable of flight,"
+                    + "generally heavier than air and driven by jet engines or propellers.")));
 
     private static final WordRecord MOCK_WORDRECORD =
-            makeWordRecord("banana", 2000, List.of("Any of several treelike plants of the genus"));
-
+            new WordRecord("airplane", 353, "Any of various winged vehicles capable of flight,"
+                    + "generally heavier than air and driven by jet engines or propellers.");
 
     @BeforeEach
     void setup() {
         when(mockWordApi.getWordFrequency(anyString(), anyString(), anyInt(), anyInt()))
                 .thenAnswer(invocation -> FREQS_MAP.get(invocation.getArgument(0)));
         when(mockWordsApi.getWordOfTheDay()).thenReturn(MOCK_WORD);
-
         when(mockWordsApi.getWordOfTheDay().getWord()).thenReturn("blueberry");
         when(mockWordsApi.getWordOfTheDay().getDefinitions())
                 .thenReturn(List.of("Any of various plants of the genus"));
@@ -66,15 +67,17 @@ class SampleDataTest {
         return fs;
     }
 
-    // """""""""""""""""""""""""""""""""""" OK
+    private static Map<Object, Object> makeMapDefin(String defin) {
+        Map<Object, Object> map = new LinkedHashMap<>(Map.of("text", String.valueOf(defin)));
+        return map;
+    }
+
     @ParameterizedTest
     @CsvSource({"apple,2000,339", "apple,2001,464", "apple,2020,0", "orange,2000,774",
-            "orange,2001,941", "orange,2050,0"})
+            "orange,2001,941", "orange,2050,0", "airplane,2012,353"})
     void getFrequencyByYear_Equal_correctValue(String word, int year, int count) {
         assertEquals(count, getFrequencyByYear(mockWordApi, word, year));
     }
-    // """""""""""""""""""""""""""""""""""" OK
-
 
     private static WordOfTheDay makeWordOfTheDay(String word, List<Object> defin) {
         WordOfTheDay wd = mock(WordOfTheDay.class);
@@ -83,22 +86,6 @@ class SampleDataTest {
         return wd;
     }
 
-    private static List<Object> makeDifinition(List<Object> Defin) {
-        WordOfTheDay wd = mock(WordOfTheDay.class);
-        when(wd.getDefinitions()).thenReturn(Defin);
-        return Defin;
-    }
-
-    // WordRecord(String word, int frequency, String definition
-    private static WordRecord makeWordRecord(String word, int frequency, List<Object> definition) {
-        WordRecord wr = mock(WordRecord.class);
-        when(wr.getWord()).thenReturn(word);
-        when(wr.getFrequency()).thenReturn(frequency);
-        when(wr.getDefinition()).thenReturn(definition.get(0).toString());
-        return wr;
-    }
-
-    // """""""""""""""""""""""""""""""""""" OK
     @Test
     void getWord_Equal_correctValue() {
         assertEquals("blueberry", getWordOfTheDay(mockWordsApi).getWord());
@@ -109,32 +96,26 @@ class SampleDataTest {
         assertEquals("Any of various plants of the genus",
                 getWordOfTheDay(mockWordsApi).getDefinitions().get(0));
     }
-    // """""""""""""""""""""""""""""""""""" OK
 
-
-
-    @Before
-    void setup2() {
-        // doReturn(MOCK_WORDRECORD).when(モックインスタンス).メソッド(任意の引数);
-        // when(SampleData.addWordOfTheDay()).thenReturn(MOCK_WORDRECORD);
-
-    }
-
+    @SuppressWarnings("static-access")
     @Test
     void addWordOfTheDay_Equal_correctValue() {
-        SampleData mockSampleData = mock(SampleData.class);
+        SampleData sd = mock(SampleData.class);
+        when(sd.getWordOfTheDay(mockWordsApi).getDefinitions()).thenReturn(DIFINITION_MAP);
+        when(sd.getWordOfTheDay(mockWordsApi).getWord()).thenReturn("airplane");
 
-        WordRecord wr = MOCK_WORDRECORD;
-        // doReturn(MOCK_WORDRECORD).when(mockSampleData).addWordOfTheDay(mockWordsApi);
-        // when(SampleData.addWordOfTheDay(mockWordsApi)).thenReturn();
-        assertEquals(wr.getDefinition(), SampleData.addWordOfTheDay(mockWordsApi).getDefinition());
+        List<Object> getDefin = sd.getWordOfTheDay(mockWordsApi).getDefinitions();
+        Object definition = getDefin.get(0);
+        @SuppressWarnings("unchecked")
+        Map<Object, Object> definitionAsMap = (Map<Object, Object>) definition;
 
-        // assertEquals(wr.getDefinition(), MOCK_WORDRECORD.getDefinition());
-        // assertEquals(wr.getDefinition(), addWordOfTheDay(mockWordsApi).getDefinition());
-    }
+        WordRecord testWordRecord = new WordRecord(
+                sd.getWordOfTheDay(mockWordsApi).getWord(), getFrequencyByYear(mockWordApi,
+                        sd.getWordOfTheDay(mockWordsApi).getWord(), FREQ_YEAR),
+                definitionAsMap.get("text").toString());
 
-    private WordRecord doReturn(WordRecord mockWordrecord) {
-
-        return MOCK_WORDRECORD;
+        assertTrue(MOCK_WORDRECORD.getWord().equals(testWordRecord.getWord())
+                && MOCK_WORDRECORD.getFrequency().equals(testWordRecord.getFrequency())
+                && MOCK_WORDRECORD.getDefinition().equals(testWordRecord.getDefinition()));
     }
 }
